NTU-662: Open up reflection access.